# gpico

./: CMakeLists.txt  README.md
include/gpico/: cdc_device.h  flash.h  io_device.h  lock.h  log.h  reset.h  syslog.h  usb.h  watchdog.h
src/: FreeRTOS_support.cpp  cdc_device.cpp  log.cpp  reset.cpp  syscalls.cpp  usb.cpp  watchdog.cpp
